资源目录数据查询优化